WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306954
[Skia] Fix mismatched WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE macro in PlatformDisplaySkia.cpp
https://bugs.webkit.org/show_bug.cgi?id=306954
Summary
[Skia] Fix mismatched WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE macro in Platfo...
Nikolas Zimmermann
Reported
2026-02-04 06:14:32 PST
The closing macro was incorrectly using _BEGIN instead of _END, leaving third-party warning suppression unbalanced.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2026-02-04 06:15:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57863
EWS
Comment 2
2026-02-04 11:28:17 PST
Committed
306793@main
(2cecee4fa4fc): <
https://commits.webkit.org/306793@main
> Reviewed commits have been landed. Closing PR #57863 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug