[Skia] Fix mismatched WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE macro in PlatformDisplaySkia.cpp https://bugs.webkit.org/show_bug.cgi?id=306954

Reviewed by Carlos Garcia Campos.

The closing macro was incorrectly using _BEGIN instead of _END, leaving
third-party warning suppression unbalanced.

* Source/WebCore/platform/graphics/skia/PlatformDisplaySkia.cpp:

Canonical link: https://commits.webkit.org/306793@main